# rust-web-with-rocket

./: .env  .gitignore  Cargo.toml  rust-web-with-rocket-wordpress.md  rust-web-with-rocket.md
migrations/2018-04-01-161756_create_people/: down.sql  up.sql
src/: connection.rs  main.rs  schema.rs
src/people/: connection.rs  handler.rs  mod.rs  repository.rs  router.rs
