[package]
name = "rust-web-with-rocket"
version = "0.1.0"
authors = ["Dan Newton <danknewton@hotmail.com>"]

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
